--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,22 @@ body>div {
     padding: 2em;
     margin: 5em;
 }
+#tryliktas .parametrai {
+    display: flex;
+    margin-bottom: 2em;
+}
+
+#tryliktas .parametras { /* This class is not in the HTML for this section, but based on the screenshot, it should be applied to each parameter group if they were wrapped */
+    width: 20%;
+    padding: 5px 10px;
+}
+
+#div-keitimui {
+    width: 100px; /* Initial width */
+    height: 100px; /* Initial height */
+    background-color: burlywood;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
