--- a/styles.css
+++ b/styles.css
@@ -50,3 +50,22 @@ textarea {
     padding: 1em;
     background-color: white;
 }
+
+#sesioliktas {
+    margin-top: 2em;
+    border: 1px dotted grey; /* From PDF */
+    padding: 1em; /* From PDF */
+}
+
+#sesioliktas .skirtukas {
+    background-color: #ececec; /* From PDF */
+    border: 1px solid #bebebe; /* From PDF */
+    padding: 1em;
+    margin-top: 1em; /* Space between content blocks */
+    display: none; /* Initially hidden */
+}
+
+/* Additional style to ensure second tab content is initially hidden */
+#sesioliktas .skirtukas#antras-skirtukas {
+    display: none;
+}
